[project]
name = "livey-supplychain"
version = "1.0.0"
description = "LiveySupplyChain - Composer supply-chain security toolkit"
authors = [{name = "ind4skylivey"}]
readme = "docs/README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/ind4skylivey/LiveySupplyChain"
Documentation = "https://github.com/ind4skylivey/LiveySupplyChain"

[project.scripts]
livey-supplychain = "livey_supplychain.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
